# IntOverflow2BufferOverflow

./: CMakeLists.txt  ReadME.md
pass/: pass.cpp
testcases/: SMT.c  aliasTrack.c  alias_taint.c  basic_taint.c  buffer.c  chain_arith.c  nothing.c  pointerAlias.c  prop.c  safe.c
testcases/irFiles/: SMT.ll  aliasTrack.ll  alias_taint.ll  basic_taint.ll  buffer.ll  chain_arith.ll  nothing.ll  pointerAlias.ll  prop.ll  safe.ll
testcases/patched/: SMT_patched.ll  aliasTrack_patched.ll  alias_taint_patched.ll  basic_taint_patched.ll  buffer_patched.ll  chain_arith_patched.ll  nothing_patched.ll  pointerAlias_patched.ll  prop_patched.ll  safe_patched.ll
testcases/results/: SMT_results.txt  aliasTrack_results.txt  alias_taint_results.txt  basic_taint_results.txt  buffer_results.txt  chain_arith_results.txt  nothing_results.txt  pointerAlias_results.txt  prop_results.txt  safe_results.txt
